--- a/css/app.css
+++ b/css/app.css
@@ -81,9 +81,7 @@ h1 {
     font-size: 33px;
 }
 
-/*
- * Styles for the Score Panel
- */
+/* Styles for the Score Panel */
 
 .score-panel {
     text-align: left;
@@ -106,4 +104,24 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+/* Style the modal */
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5)
+
+}
+    
+.modal table{
+    background-color: #fff;
+    color: #000;
+    width: 50%;
+    padding: 20px;
+    margin: 10% auto;
 }
