--- a/css/app.css
+++ b/css/app.css
@@ -125,3 +125,18 @@ h1 {
     padding: 20px;
     margin: 10% auto;
 }
+.modal table thead th:not(:first-child){
+    width: 67px;
+    cursor: pointer;
+}
+.modal table tbody button{
+    width: 100%;
+    height: 48px;
+    border: none;
+    background-color: #239954;
+    color: #fff
+}
+.modal table tbody .finalRaiting li{
+    display: inline-flex;
+    list-style: none
+}
